Adding two columns for confidence judgement

--- a/css/jspsych.css
+++ b/css/jspsych.css
@@ -74,6 +74,12 @@
   color: #333;
   background-color: #fff;
   border-color: #ccc;
+  width: 300px;
+}
+
+.jspsych-btn-group{
+   display: inline-block;
+   margin: 12px 160px;
 }
 
 /* only apply the hover style on devices with a mouse/pointer that can hover - issue #977 */
